fix: align y axis on small devices

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -154,5 +154,6 @@
 
   .imageContainer2 {
     right: 5%;
+    top: 0;
   }
 }
